--- a/quarkus-dummy/my-gradle-app/build.gradle
+++ b/quarkus-dummy/my-gradle-app/build.gradle
@@ -19,6 +19,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
+    implementation 'io.quarkus:quarkus-smallrye-openapi:3.4.1'
+
     testImplementation 'io.quarkus:quarkus-junit5'
     testImplementation 'io.rest-assured:rest-assured'
 }
