--- a/quarkus-dummy/web-service-mongodb/build.gradle
+++ b/quarkus-dummy/web-service-mongodb/build.gradle
@@ -15,6 +15,13 @@ dependencies {
     implementation 'io.quarkus:quarkus-arc'
     testImplementation 'io.quarkus:quarkus-junit5'
     testImplementation 'io.rest-assured:rest-assured'
+
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    // Swagger
+    implementation 'io.quarkus:quarkus-smallrye-openapi:3.4.1'
+    // MongoDB
+    implementation("io.quarkus:quarkus-mongodb-client")
 }
 
 group 'web-service'
