--- a/keycloak/keycloak-sso-spring/build.gradle
+++ b/keycloak/keycloak-sso-spring/build.gradle
@@ -18,6 +18,11 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+
+	// https://mvnrepository.com/artifact/org.keycloak/keycloak-spring-boot-starter
+	implementation 'org.keycloak:keycloak-spring-boot-starter:3.1.0.Final'
 }
 
 tasks.named('test') {
