--- a/keycloak/keycloak-sso-spring/src/main/resources/application.properties
+++ b/keycloak/keycloak-sso-spring/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=9090
+
+# Keycloak server address
+keycloak.auth-server-url=http://localhost:8080/realms//account/#/
+
+# Realm name
+keycloak.realm=google-auth
+
+# Client ID
+keycloak.resource=account
 
