--- a/keycloak/keycloak-sso-spring/src/main/resources/application.properties
+++ b/keycloak/keycloak-sso-spring/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-server.port=9090
+server.port=7070
 
-# Keycloak server address
-keycloak.auth-server-url=http://localhost:8080/realms//account/#/
+spring.security.oauth2.client.registration.keycloak.client-id=spring
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.scope=openid
 
-# Realm name
-keycloak.realm=google-auth
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/google-auth
+spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
 
-# Client ID
-keycloak.resource=account
 
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/google-auth
