--- a/keycloak/keycloak-role-spring/sample-keycloak-accesstoken/pom.xml
+++ b/keycloak/keycloak-role-spring/sample-keycloak-accesstoken/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.sample.keycloak</groupId>
-	<artifactId>com-sample-keycloak</artifactId>
+	<artifactId>sample-keycloak-accesstoken</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>com-sample-keycloak</name>
+	<name>sample-keycloak-accesstoken</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
